syntax = "proto3";

package weeb_3.etiquette_1;

message Syn {
    bytes ObservedUnderlay = 1;
}

message Ack {
    BzzAddress Address = 1;
    uint64 NetworkID = 2;
    bool FullNode = 3;
    bytes Nonce = 4;
    string WelcomeMessage  = 99;
}

message SynAck {
    Syn Syn = 1;
    Ack Ack = 2;
}

message BzzAddress {
    bytes Underlay = 1;
    bytes Signature = 2;
    bytes Overlay = 3;
    repeated bytes RTCUnderlay = 4;
}